@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2008, 2013, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2008, 2014, Oracle and/or its affiliates. All rights reserved.
 #
 # The MySQL Connector/C++ is licensed under the terms of the GPLv2
 # <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most
@@ -35,58 +35,62 @@ IF(WIN32)
 	ADD_DEFINITIONS("-D_SCL_SECURE_NO_WARNINGS")
 	ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
 
-  SET(CMAKE_FIND_LIBRARY_SUFFIXES ".dll")
-  FIND_LIBRARY(MYSQLCPPCONN_DYNLOAD_MYSQL_LIB
-    NAMES 
-      libmysql
-    PATHS
-      ${MYSQL_LIB_DIR}
-      ${MYSQL_LIB_DIR}/lib/${libsuffixDist}
-      ${MYSQL_LIB_DIR}/lib  #mysqlclient may be in lib for some c/c distros
-      ${MYSQL_LIB_DIR}/libmysql/${libsuffixBuild}
-      ${MYSQL_LIB_DIR}/client/${libsuffixBuild}
-      $ENV{MYSQL_LIB_DIR}
-      $ENV{MYSQL_LIB_DIR}/lib/${libsuffixDist}
-      $ENV{MYSQL_LIB_DIR}/lib  #mysqlclient may be in lib for some c/c distros
-      $ENV{MYSQL_LIB_DIR}/libmysql/${libsuffixBuild}
-      $ENV{MYSQL_LIB_DIR}/client/${libsuffixBuild}
-      $ENV{MYSQL_DIR}/lib/${libsuffixDist}
-      $ENV{MYSQL_DIR}/lib  #mysqlclient may be in lib for some c/c distros
-      $ENV{MYSQL_DIR}/libmysql/${libsuffixBuild}
-      $ENV{MYSQL_DIR}/client/${libsuffixBuild}
-      $ENV{ProgramFiles}/MySQL/*/lib/${libsuffixDist}
-      $ENV{ProgramFiles}/MySQL/*/lib
-      $ENV{SystemDrive}/MySQL/*/lib/${libsuffixDist}
-      $ENV{SystemDrive}/MySQL/*/lib)
+	SET(CMAKE_FIND_LIBRARY_SUFFIXES ".dll")
+	FIND_LIBRARY(MYSQLCPPCONN_DYNLOAD_MYSQL_LIB
+	  NAMES 
+		libmysql
+	  PATHS
+		${MYSQL_LIB_DIR}
+		${MYSQL_LIB_DIR}/lib/${libsuffixDist}
+		${MYSQL_LIB_DIR}/lib  #mysqlclient may be in lib for some c/c distros
+		${MYSQL_LIB_DIR}/libmysql/${libsuffixBuild}
+		${MYSQL_LIB_DIR}/client/${libsuffixBuild}
+		$ENV{MYSQL_LIB_DIR}
+		$ENV{MYSQL_LIB_DIR}/lib/${libsuffixDist}
+		$ENV{MYSQL_LIB_DIR}/lib  #mysqlclient may be in lib for some c/c distros
+		$ENV{MYSQL_LIB_DIR}/libmysql/${libsuffixBuild}
+		$ENV{MYSQL_LIB_DIR}/client/${libsuffixBuild}
+		$ENV{MYSQL_DIR}/lib/${libsuffixDist}
+		$ENV{MYSQL_DIR}/lib  #mysqlclient may be in lib for some c/c distros
+		$ENV{MYSQL_DIR}/libmysql/${libsuffixBuild}
+		$ENV{MYSQL_DIR}/client/${libsuffixBuild}
+		$ENV{ProgramFiles}/MySQL/*/lib/${libsuffixDist}
+		$ENV{ProgramFiles}/MySQL/*/lib
+		$ENV{SystemDrive}/MySQL/*/lib/${libsuffixDist}
+		$ENV{SystemDrive}/MySQL/*/lib
+	  NO_DEFAULT_PATH
+	)
 
 ELSEIF(NOT WIN32)
 	SET(MY_TARGET_LINK_LIBRARIES mysqlcppconn test_framework)
-  FIND_LIBRARY(MYSQLCPPCONN_DYNLOAD_MYSQL_LIB
-    NAMES 
-      libmysqlclient_r.so
-      libmysqlclient.so
-    PATHS
-      ${MYSQL_LIB_DIR}
-      ${MYSQL_LIB_DIR}/libmysql_r/.libs
-      ${MYSQL_LIB_DIR}/lib
-      ${MYSQL_LIB_DIR}/lib/mysql
-      $ENV{MYSQL_LIB_DIR}
-      $ENV{MYSQL_LIB_DIR}/libmysql_r/.libs
-      $ENV{MYSQL_LIB_DIR}/lib
-      $ENV{MYSQL_LIB_DIR}/lib/mysql
-      $ENV{MYSQL_DIR}/libmysql_r/.libs
-      $ENV{MYSQL_DIR}/lib
-      $ENV{MYSQL_DIR}/lib/mysql
-      ${MYSQL_CLIB_DIR}
-      ${MYSQL_CLIB_DIR}/libmysql_r/.libs
-      ${MYSQL_CLIB_DIR}/lib
-      ${MYSQL_CLIB_DIR}/lib/mysql
-      /usr/lib/mysql
-      /usr/local/lib/mysql
-      /usr/local/mysql/lib
-      /usr/local/mysql/lib/mysql
-      /opt/mysql/mysql/lib
-      /opt/mysql/mysql/lib/mysql)
+	FIND_LIBRARY(MYSQLCPPCONN_DYNLOAD_MYSQL_LIB
+	  NAMES 
+		libmysqlclient_r.so
+		libmysqlclient.so
+	  PATHS
+		${MYSQL_LIB_DIR}
+		${MYSQL_LIB_DIR}/libmysql_r/.libs
+		${MYSQL_LIB_DIR}/lib
+		${MYSQL_LIB_DIR}/lib/mysql
+		$ENV{MYSQL_LIB_DIR}
+		$ENV{MYSQL_LIB_DIR}/libmysql_r/.libs
+		$ENV{MYSQL_LIB_DIR}/lib
+		$ENV{MYSQL_LIB_DIR}/lib/mysql
+		$ENV{MYSQL_DIR}/libmysql_r/.libs
+		$ENV{MYSQL_DIR}/lib
+		$ENV{MYSQL_DIR}/lib/mysql
+		${MYSQL_CLIB_DIR}
+		${MYSQL_CLIB_DIR}/libmysql_r/.libs
+		${MYSQL_CLIB_DIR}/lib
+		${MYSQL_CLIB_DIR}/lib/mysql
+		/usr/lib/mysql
+		/usr/local/lib/mysql
+		/usr/local/mysql/lib
+		/usr/local/mysql/lib/mysql
+		/opt/mysql/mysql/lib
+		/opt/mysql/mysql/lib/mysql
+	  NO_DEFAULT_PATH
+	)
 ENDIF(WIN32)
 
 IF(CMAKE_COMPILER_IS_GNUCC AND MYSQLCPPCONN_GCOV_ENABLE)
