@@ -46,6 +46,7 @@ GA  1.1.5 -
 - Added missing sort order for DatabaseMetaData::getImportedKeys() and
   DatabaseMetaData::getIndexInfo() for no_i_s case. (Bug#19505248)
 - There is no reconnection function in Connector/C++ (Bug#14207722)
+- CMake picking up libmysqlclient from system path (Bug#19940663)
 
 GA  1.1.4 -
 - Both static and dynamic driver libraries are now linked statically against
